<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="org.zarroboogs.maps.ui.maps.LeftDrawerFragment">

    <View
        android:id="@+id/left_top_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/left_drawer_top_view_height"
        android:background="@drawable/left_drawer_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/left_top_banner"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">


        <Button
            android:id="@+id/left_drawer_satellite"
            style="@style/drawerMenuButton"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:drawableLeft="@drawable/ic_book_grey600_24dp"
            android:text="@string/left_drawer_satellite"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/left_drawer_setting"
            style="@style/drawerMenuButton"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:drawableLeft="@drawable/ic_settings_applications_grey600_24dp"
            android:text="@string/left_drawer_setting"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/leftDrawerOfflineBtn"
            style="@style/drawerMenuButton"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:drawableLeft="@drawable/ic_settings_applications_grey600_24dp"
            android:text="@string/left_drawer_offline"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/left_drawer_camera"
            style="@style/drawerMenuButton"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:drawableLeft="@drawable/ic_settings_applications_grey600_24dp"
            android:text="@string/left_drawer_camera"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

</RelativeLayout>
