<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border" >

        <ImageView
            android:id="@+id/route_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:src="@drawable/back_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/routeshow"
            android:textColor="@android:color/black"
            android:textSize="@dimen/titletext_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/border" >

        <com.amap.api.maps.MapView
            android:id="@+id/routemap"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/margin_left"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_default"
            android:textColor="@android:color/holo_red_dark"
            android:singleLine="true"
            android:textSize="@dimen/route_text_size" />

        <TextView
            android:id="@+id/navi_route_cost_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingTop="@dimen/margin_top"
            android:text="@string/routeinfo_4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/route_text_size" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/routestartnavi"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/naviroute_navi_height"
            android:layout_alignParentRight="true"
            android:text="@string/start_navi_navi" />

        <AutoCompleteTextView
            android:id="@+id/navi_theme_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/naviroute_navi_height"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/routestartnavi"
            android:focusable="false"
            android:hint="@string/theme_blue" >
        </AutoCompleteTextView>

        <ImageView
            android:id="@+id/navi_theme_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/naviroute_navi_height"
            android:layout_alignBottom="@+id/navi_theme_text"
            android:layout_alignRight="@+id/navi_theme_text"
            android:layout_alignTop="@id/navi_theme_text"
            android:layout_marginRight="@dimen/margin_right"
            android:src="@drawable/ic_qu_map" />
    </RelativeLayout>

</LinearLayout>